@@ -96,6 +96,7 @@ class WC_REST_Stripe_Account_Controller extends WC_Stripe_REST_Base_Controller {
 				'webhook_status_message'  => WC_Stripe_Webhook_State::get_webhook_status_message(),
 				'webhook_url'             => WC_Stripe_Helper::get_webhook_url(),
 				'configured_webhook_urls' => WC_Stripe_Webhook_State::get_configured_webhook_urls(),
+				'is_webhook_enabled'      => $this->account->is_webhook_enabled(),
 				'oauth_connections'       => [
 					'test' => $this->get_account_oauth_connection_data( 'test' ),
 					'live' => $this->get_account_oauth_connection_data( 'live' ),
